Fix (#8)
* add: URLにアクセスしてデータベースからあたいをとって来れるようにした（仮）

* add: データベースから値をとって来て表示withWire

* add: データベースから値をとって来て表示withWire

---------
