# server/gen/http/cli/pub_sub_server/cli.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.11.3, DO NOT EDIT.
+// Code generated by goa v3.2.5, DO NOT EDIT.
 //
 // PubSubServer HTTP client CLI support package
 //
@@ -40,7 +40,7 @@ func ParseEndpoint(
 	enc func(*http.Request) goahttp.Encoder,
 	dec func(*http.Response) goahttp.Decoder,
 	restore bool,
-) (goa.Endpoint, any, error) {
+) (goa.Endpoint, interface{}, error) {
 	var (
 		pubSubServerFlags = flag.NewFlagSet("pub-sub-server", flag.ContinueOnError)
 
@@ -118,7 +118,7 @@ func ParseEndpoint(
 	}
 
 	var (
-		data     any
+		data     interface{}
 		endpoint goa.Endpoint
 		err      error
 	)
@@ -151,7 +151,7 @@ func ParseEndpoint(
 func pubSubServerUsage() {
 	fmt.Fprintf(os.Stderr, `The PubSubServer service performs operations on messages.
 Usage:
-    %[1]s [globalflags] pub-sub-server COMMAND [flags]
+    %s [globalflags] pub-sub-server COMMAND [flags]
 
 COMMAND:
     publish: Publish implements publish.
@@ -159,39 +159,39 @@ COMMAND:
     send-message: SendMessage implements sendMessage.
 
 Additional help:
-    %[1]s pub-sub-server COMMAND --help
-`, os.Args[0])
+    %s pub-sub-server COMMAND --help
+`, os.Args[0], os.Args[0])
 }
 func pubSubServerPublishUsage() {
-	fmt.Fprintf(os.Stderr, `%[1]s [flags] pub-sub-server publish -room-name STRING
+	fmt.Fprintf(os.Stderr, `%s [flags] pub-sub-server publish -room-name STRING
 
 Publish implements publish.
     -room-name STRING: roomName to publish
 
 Example:
-    %[1]s pub-sub-server publish --room-name "room1"
+    `+os.Args[0]+` pub-sub-server publish --room-name "room1"
 `, os.Args[0])
 }
 
 func pubSubServerSubscribeUsage() {
-	fmt.Fprintf(os.Stderr, `%[1]s [flags] pub-sub-server subscribe -room-name STRING
+	fmt.Fprintf(os.Stderr, `%s [flags] pub-sub-server subscribe -room-name STRING
 
 Subscribe implements subscribe.
     -room-name STRING: roomName to subscribe
 
 Example:
-    %[1]s pub-sub-server subscribe --room-name "room1"
+    `+os.Args[0]+` pub-sub-server subscribe --room-name "room1"
 `, os.Args[0])
 }
 
 func pubSubServerSendMessageUsage() {
-	fmt.Fprintf(os.Stderr, `%[1]s [flags] pub-sub-server send-message -room-name STRING -message STRING
+	fmt.Fprintf(os.Stderr, `%s [flags] pub-sub-server send-message -room-name STRING -message STRING
 
 SendMessage implements sendMessage.
     -room-name STRING: roomName to publish
     -message STRING: message to publish
 
 Example:
-    %[1]s pub-sub-server send-message --room-name "room1" --message "hello"
+    `+os.Args[0]+` pub-sub-server send-message --room-name "room1" --message "hello"
 `, os.Args[0])
 }
