# server/gen/http/pub_sub_server/server/server.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.11.3, DO NOT EDIT.
+// Code generated by goa v3.2.5, DO NOT EDIT.
 //
 // PubSubServer HTTP server
 //
@@ -24,6 +24,12 @@ type Server struct {
 	SendMessage http.Handler
 }
 
+// ErrorNamer is an interface implemented by generated error structs that
+// exposes the name of the error as defined in the design.
+type ErrorNamer interface {
+	ErrorName() string
+}
+
 // MountPoint holds information about the mounted endpoints.
 type MountPoint struct {
 	// Method is the name of the service method served by the mounted HTTP handler.
@@ -47,7 +53,7 @@ func New(
 	decoder func(*http.Request) goahttp.Decoder,
 	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
 	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
+	formatter func(err error) goahttp.Statuser,
 ) *Server {
 	return &Server{
 		Mounts: []*MountPoint{
@@ -71,19 +77,11 @@ func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.SendMessage = m(s.SendMessage)
 }
 
-// MethodNames returns the methods served.
-func (s *Server) MethodNames() []string { return pubsubserver.MethodNames[:] }
-
 // Mount configures the mux to serve the PubSubServer endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountPublishHandler(mux, h.Publish)
 	MountSubscribeHandler(mux, h.Subscribe)
 	MountSendMessageHandler(mux, h.SendMessage)
-}
-
-// Mount configures the mux to serve the PubSubServer endpoints.
-func (s *Server) Mount(mux goahttp.Muxer) {
-	Mount(mux, s)
 }
 
 // MountPublishHandler configures the mux to serve the "PubSubServer" service
@@ -106,7 +104,7 @@ func NewPublishHandler(
 	decoder func(*http.Request) goahttp.Decoder,
 	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
 	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
+	formatter func(err error) goahttp.Statuser,
 ) http.Handler {
 	var (
 		decodeRequest  = DecodePublishRequest(mux, decoder)
@@ -157,7 +155,7 @@ func NewSubscribeHandler(
 	decoder func(*http.Request) goahttp.Decoder,
 	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
 	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
+	formatter func(err error) goahttp.Statuser,
 ) http.Handler {
 	var (
 		decodeRequest  = DecodeSubscribeRequest(mux, decoder)
@@ -208,7 +206,7 @@ func NewSendMessageHandler(
 	decoder func(*http.Request) goahttp.Decoder,
 	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
 	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
+	formatter func(err error) goahttp.Statuser,
 ) http.Handler {
 	var (
 		decodeRequest  = DecodeSendMessageRequest(mux, decoder)
