# server/pub_sub_server.go
@@ -2,10 +2,14 @@ package pubsubserverrestapi
 
 import (
 	"context"
+	"database/sql"
+	_ "github.com/lib/pq"
+	pubsubserver "github.com/wadda0714/Golang_PubSubServer/server/gen/pub_sub_server"
+	"github.com/wadda0714/Golang_PubSubServer/server/usecase"
+	"github.com/wadda0714/Golang_PubSubServer/server/usecase/input"
+	"github.com/wadda0714/Golang_PubSubServer/server/usecase/output"
 	"github.com/wadda0714/Golang_PubSubServer/util"
 	"log"
-
-	pubsubserver "github.com/wadda0714/Golang_PubSubServer/server/gen/pub_sub_server"
 )
 
 // PubSubServer service example implementation.
@@ -22,19 +26,23 @@ func NewPubSubServer(logger *log.Logger) pubsubserver.Service {
 // Publish implements publish.
 func (s *pubSubServersrvc) Publish(ctx context.Context, p *pubsubserver.PublishPayload) (res string, err error) {
 	s.logger.Print("pubSubServer.publish")
-	return
+	return "aaa", nil
+
 }
 
 // Subscribe implements subscribe.
 func (s *pubSubServersrvc) Subscribe(ctx context.Context, p *pubsubserver.SubscribePayload) (res string, err error) {
 	s.logger.Print("pubSubServer.subscribe")
-	nameList, err := util.ReadFile("test.txt")
+	db, err := sql.Open("postgres", "user=root dbname=userdb password=root sslmode=disable port=5430 host=localhost ")
+	defer db.Close()
+	user := usecase.GeneratedNewUserDI(db)
+	var op output.SubscribeOutput
+	op, err = user.Subscribe(input.SubscribeInput{RoomID: 1})
 	if err != nil {
 		panic(err)
 	}
-	s.logger.Print(nameList)
 
-	return
+	return op.Messages[0].Content, nil
 }
 
 // SendMessage implements sendMessage.
